--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,3 +38,11 @@ a{
   font-size: 24px;
   text-decoration: none;
 }
+
+#signup .signupForm .errorMsg{
+  color: #efe8e8;
+  background-color: red;
+  width: 178px;
+  margin-left: 122px;
+  margin-top: auto;
+}
